--- a/NodeJS - BookApp/views/create.ejs
+++ b/NodeJS - BookApp/views/create.ejs
@@ -1,1 +1,37 @@
-// add your code here
+<html>
+    <head>
+        <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+        <link href="http://maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+        <script src="http://maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+        <link rel="stylesheet" type="text/css" href="css/style.css" />
+    </head>
+    <body id="BookForm">
+        <div class="container">
+            <div class="login-form">
+                <div class="main-div">
+                    <div class="panel">
+                        <h2>Add Books</h2>
+                        <p>Please enter book id, title and author name</p>
+                    </div>
+                    <form action="http://127.0.0.1:3000/create" method="post" id="Create">
+                        <div class="form-group">
+                            <input type="text" class="form-control" name="bookid" placeholder="Book Id" value=<%= bookid %>>
+                            <p style="color:red;display:<%= display %>"><%= msg %></p>
+                        </div>
+                        <div class="form-group">
+                            <input type="text" class="form-control" name="booktitle" placeholder="Book Title" value=<%= booktitle %>>
+                        </div>
+                        <div class="form-group">
+                            <input type="text" class="form-control" name="bookauthor" placeholder="Book Author" value=<%= bookauthor %>>
+                        </div>
+                        <button type="submit" class="btn btn-primary">Create</button>        
+                    </form>         
+                </div>
+            </div>
+        </div>
+    </body>
+</html>
+
+
+
+
